--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --foreground: #171717;
 }
 
+/* biome-ignore lint/suspicious/noUnknownAtRules: <Tailwind Theme valid syntax> */
 @theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
