--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,17 +5,10 @@
   --foreground: #171717;
 }
 
-/* biome-ignore lint/suspicious/noUnknownAtRules: <Tailwind Theme valid syntax> */
-@theme {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-jetbrains-mono);
-  --font-mono: var(--font-fira-code);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
+    /* End of Selection */
     --foreground: #ededed;
   }
 }
